package algorithms;

public class ShakerSort {
    public ShakerSort() {
        System.out.println("ShakerSort");
    }
}
